Добавлены опциональные предметы в админку

--- a/admin/language/en-GB/en-GB.com_egecalculator.ini
+++ b/admin/language/en-GB/en-GB.com_egecalculator.ini
@@ -13,4 +13,5 @@ COM_EGECALCULATOR_DIRECTION_ID="ID"
 COM_EGECALCULATOR_EDIT_TITLE="Редактировать направление"
 COM_EGECALCULATOR_MANAGER_DIRECTION_EDIT="Редактировать направление"
 COM_EGECALCULATOR_MANAGER_DIRECTION_NEW="Новое направление"
-COM_EGECALCULATOR_SUBJECT_TITLE="Предмет"
+COM_EGECALCULATOR_REQUIRED_SUBJECT_TITLE="Обязательные предметы"
+COM_EGECALCULATOR_OPTIONAL_SUBJECT_TITLE="Опциональные предметы"
