Добавлена поддержка опциональных параметров со стороны сайта

--- a/site/language/en-GB/en-GB.com_egecalculator.ini
+++ b/site/language/en-GB/en-GB.com_egecalculator.ini
@@ -1,11 +1,11 @@
-COM_EGECALCULATOR_TITLE="Калькулятор ЕГЭ"
-COM_EGECALCULATOR_CHOOSE_SUBJECTS="Выберите не менее трех предметов из списка"
-COM_EGECALCULATOR_LOADING="Загрузка..."
-COM_EGECALCULATOR_ERROR_NO_DIRECTIONS="Нет направлений по выбранным предметам"
-COM_EGECALCULATOR_TABLE_DIRECTIONS_HEADER="Наименование подготовки"
-COM_EGECALCULATOR_TABLE_SUBJECTS_HEADER="Вступительные испытания"
-COM_EGECALCULATOR_TABLE_FULLTIME_HEADER="Очная форма обучения"
-COM_EGECALCULATOR_TABLE_DISTANT_HEADER="Заочная форма обучения"
-COM_EGECALCULATOR_TABLE_PLACES_HEADER="Количество бюджетных мест"
-COM_EGECALCULATOR_TABLE_SCORE_HEADER="Проходной балл"
-COM_EGECALCULATOR_FORM_SUBMIT="Подобрать направления подготовки"
+COM_EGECALCULATOR_CHOOSE_SUBJECTS=Выберите предметы
+COM_EGECALCULATOR_LOADING=Загрузка...
+COM_EGECALCULATOR_TITLE=Калькулятор ЕГЭ
+COM_EGECALCULATOR_TABLE_DIRECTIONS_HEADER=Направления
+COM_EGECALCULATOR_TABLE_FULLTIME_HEADER=Очно
+COM_EGECALCULATOR_TABLE_DISTANT_HEADER=Заочно
+COM_EGECALCULATOR_TABLE_PLACES_HEADER=Места
+COM_EGECALCULATOR_TABLE_SCORE_HEADER=Проходной балл
+COM_EGECALCULATOR_FORM_SUBMIT=Подобрать направления подготовки
+COM_EGECALCULATOR_ERROR_NO_DIRECTIONS=Подходящие направления не найдены
+COM_EGECALCULATOR_ERROR_NO_SUBJECTS=Выберите не менее трех предметов из списка
