Изменены основные столбцы и исправлено соответствующее отображение в админке

--- a/admin/language/en-GB/en-GB.com_egecalculator.ini
+++ b/admin/language/en-GB/en-GB.com_egecalculator.ini
@@ -5,10 +5,9 @@ COM_EGECALCULATOR_SUBJECTS="Предметы"
 COM_EGECALCULATOR_MANAGER_DIRECTIONS="Направления"
 COM_EGECALCULATOR_DIRECTION_TITLE="Название"
 COM_EGECALCULATOR_DIRECTION_PUBLISHED="Опубликовано"
-COM_EGECALCULATOR_DIRECTION_FULLTIME_PLACES="Очные места"
-COM_EGECALCULATOR_DIRECTION_FULLTIME_SCORE="Проходной балл"
-COM_EGECALCULATOR_DIRECTION_DISTANT_PLACES="Заочные места"
-COM_EGECALCULATOR_DIRECTION_DISTANT_SCORE="Проходной балл"
+COM_EGECALCULATOR_BUDGET_PLACES="Количество бюджетных мест"
+COM_EGECALCULATOR_PAID_PLACES="Количество мест платно"
+COM_EGECALCULATOR_PASSING_GRADE="Проходной балл"
 COM_EGECALCULATOR_DIRECTION_ID="ID"
 COM_EGECALCULATOR_EDIT_TITLE="Редактировать направление"
 COM_EGECALCULATOR_MANAGER_DIRECTION_EDIT="Редактировать направление"
