Реализовано удаление направлений.

--- a/admin/language/en-GB/en-GB.com_egecalculator.ini
+++ b/admin/language/en-GB/en-GB.com_egecalculator.ini
@@ -15,3 +15,4 @@ COM_EGECALCULATOR_MANAGER_DIRECTION_NEW="Новое направление"
 COM_EGECALCULATOR_REQUIRED_SUBJECT_TITLE="Обязательные предметы"
 COM_EGECALCULATOR_OPTIONAL_SUBJECT_TITLE="Опциональные предметы"
 COM_EGECALCULATOR_CATEGORY_OPTIONS="Категория"
+COM_EGECALCULATOR_N_ITEMS_DELETED="Удалено направление: %s шт."
