Реализовано отображение обновленных данных на фронтенде.

--- a/site/language/en-GB/en-GB.com_egecalculator.ini
+++ b/site/language/en-GB/en-GB.com_egecalculator.ini
@@ -2,10 +2,8 @@ COM_EGECALCULATOR_CHOOSE_SUBJECTS=Выберите предметы
 COM_EGECALCULATOR_LOADING=Загрузка...
 COM_EGECALCULATOR_TITLE=Калькулятор ЕГЭ
 COM_EGECALCULATOR_TABLE_DIRECTIONS_HEADER=Направления
-COM_EGECALCULATOR_TABLE_FULLTIME_HEADER=Очно
-COM_EGECALCULATOR_TABLE_DISTANT_HEADER=Заочно
-COM_EGECALCULATOR_TABLE_PLACES_HEADER=Места
-COM_EGECALCULATOR_TABLE_SCORE_HEADER=Проходной балл
-COM_EGECALCULATOR_FORM_SUBMIT=Подобрать направления подготовки
+COM_EGECALCULATOR_TABLE_BUDGET_PLACES=Колиество бюджетных мест
+COM_EGECALCULATOR_TABLE_PAID_PLACES=Количество мест платно
+COM_EGECALCULATOR_TABLE_PASSING_SCORE=Проходной балл
+COM_EGECALCULATOR_FORM_SUBMIT=Подтвердить
 COM_EGECALCULATOR_ERROR_NO_DIRECTIONS=Подходящие направления не найдены
-COM_EGECALCULATOR_ERROR_NO_SUBJECTS=Выберите не менее трех предметов из списка
