Исправлен внешний вид списка предметов в админке.

--- a/admin/language/en-GB/en-GB.com_egecalculator.ini
+++ b/admin/language/en-GB/en-GB.com_egecalculator.ini
@@ -2,6 +2,7 @@ COM_EGECALCULATOR_TITLE="Калькулятор ЕГЭ"
 COM_EGECALCULATOR_DESCRIPTION="Позволяет на основе выбранные предметов подобрать подходящие направления подготовки"
 COM_EGECALCULATOR_DIRECTIONS="Направления"
 COM_EGECALCULATOR_SUBJECTS="Предметы"
+COM_EGECALCULATOR_MANAGER_SUBJECTS="Предметы"
 COM_EGECALCULATOR_MANAGER_DIRECTIONS="Направления"
 COM_EGECALCULATOR_DIRECTION_TITLE="Название"
 COM_EGECALCULATOR_DIRECTION_PUBLISHED="Опубликовано"
