--- a/site/language/en-GB/en-GB.com_egecalculator.ini
+++ b/site/language/en-GB/en-GB.com_egecalculator.ini
@@ -2,7 +2,7 @@ COM_EGECALCULATOR_CHOOSE_SUBJECTS=Выберите предметы
 COM_EGECALCULATOR_LOADING=Загрузка...
 COM_EGECALCULATOR_TITLE=Калькулятор ЕГЭ
 COM_EGECALCULATOR_TABLE_DIRECTIONS_HEADER=Направления
-COM_EGECALCULATOR_TABLE_BUDGET_PLACES=Колиество бюджетных мест
+COM_EGECALCULATOR_TABLE_BUDGET_PLACES=Количество бюджетных мест
 COM_EGECALCULATOR_TABLE_PAID_PLACES=Количество мест платно
 COM_EGECALCULATOR_TABLE_PASSING_SCORE=Проходной балл
 COM_EGECALCULATOR_FORM_SUBMIT=Подтвердить
