Добавлено разделение предметов на ЕГЭ и прочие вступительные испытания

--- a/admin/language/en-GB/en-GB.com_egecalculator.ini
+++ b/admin/language/en-GB/en-GB.com_egecalculator.ini
@@ -1,19 +1,22 @@
-COM_EGECALCULATOR_TITLE="Калькулятор ЕГЭ"
+COM_EGECALCULATOR_BUDGET_PLACES="Количество бюджетных мест"
+COM_EGECALCULATOR_CATEGORY_OPTIONS="Категория"
 COM_EGECALCULATOR_DESCRIPTION="Позволяет на основе выбранные предметов подобрать подходящие направления подготовки"
 COM_EGECALCULATOR_DIRECTIONS="Направления"
-COM_EGECALCULATOR_SUBJECTS="Предметы"
-COM_EGECALCULATOR_MANAGER_SUBJECTS="Предметы"
-COM_EGECALCULATOR_MANAGER_DIRECTIONS="Направления"
-COM_EGECALCULATOR_DIRECTION_TITLE="Название"
-COM_EGECALCULATOR_DIRECTION_PUBLISHED="Опубликовано"
-COM_EGECALCULATOR_BUDGET_PLACES="Количество бюджетных мест"
-COM_EGECALCULATOR_PAID_PLACES="Количество мест платно"
-COM_EGECALCULATOR_PASSING_GRADE="Проходной балл"
 COM_EGECALCULATOR_DIRECTION_ID="ID"
+COM_EGECALCULATOR_DIRECTION_PUBLISHED="Опубликовано"
+COM_EGECALCULATOR_DIRECTION_TITLE="Название"
 COM_EGECALCULATOR_EDIT_TITLE="Редактировать направление"
+COM_EGECALCULATOR_MANAGER_DIRECTIONS="Направления"
 COM_EGECALCULATOR_MANAGER_DIRECTION_EDIT="Редактировать направление"
 COM_EGECALCULATOR_MANAGER_DIRECTION_NEW="Новое направление"
-COM_EGECALCULATOR_REQUIRED_SUBJECT_TITLE="Обязательные предметы"
-COM_EGECALCULATOR_OPTIONAL_SUBJECT_TITLE="Опциональные предметы"
-COM_EGECALCULATOR_CATEGORY_OPTIONS="Категория"
+COM_EGECALCULATOR_MANAGER_SUBJECTS="Предметы"
+COM_EGECALCULATOR_MANAGER_SUBJECT_EDIT="Редактировать предмет"
 COM_EGECALCULATOR_N_ITEMS_DELETED="Удалено направление: %s шт."
+COM_EGECALCULATOR_OPTIONAL_SUBJECT_TITLE="Опциональные предметы"
+COM_EGECALCULATOR_PAID_PLACES="Количество мест платно"
+COM_EGECALCULATOR_PASSING_GRADE="Проходной балл"
+COM_EGECALCULATOR_REQUIRED_SUBJECT_TITLE="Обязательные предметы"
+COM_EGECALCULATOR_SUBJECTS="Предметы"
+COM_EGECALCULATOR_SUBJECT_TITLE="Предмет"
+COM_EGECALCULATOR_SUBJECT_TYPE="Тип испытания"
+COM_EGECALCULATOR_TITLE="Калькулятор ЕГЭ"
