--- a/admin/language/en-GB/en-GB.com_egecalculator.ini
+++ b/admin/language/en-GB/en-GB.com_egecalculator.ini
@@ -5,6 +5,7 @@ COM_EGECALCULATOR_DIRECTIONS="Направления"
 COM_EGECALCULATOR_DIRECTION_ID="ID"
 COM_EGECALCULATOR_DIRECTION_PUBLISHED="Опубликовано"
 COM_EGECALCULATOR_DIRECTION_TITLE="Название"
+COM_EGECALCULATOR_LINK="Ссылка"
 COM_EGECALCULATOR_EDIT_TITLE="Редактировать направление"
 COM_EGECALCULATOR_MANAGER_DIRECTIONS="Направления"
 COM_EGECALCULATOR_MANAGER_DIRECTION_EDIT="Редактировать направление"
